--- a/src/sass/_left.scss
+++ b/src/sass/_left.scss
@@ -6,7 +6,6 @@
   color: $color-lvl6;
   cursor: pointer;
   height: $toolbar-item-height;
-  user-select: none;
   display: flex;
   align-items: center;
   padding: 0 12px;
