--- a/src/sass/_right.scss
+++ b/src/sass/_right.scss
@@ -19,7 +19,12 @@
 }
 
 .detail-footer {
-  margin: auto 0 0 0;
+  .toolbar-inner {
+    cursor: unset;
+  }
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   background: $color-lvl5;
   &:hover {
     background-color: $color-lvl5;
