--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -90,8 +90,7 @@ body {
       transition: all 0.3s ease;
     }
     background-color: $color-lvl3;
-    min-width: 360px;
-    max-width: 400px;
+    max-width: 300px;
     height: 100%;
     z-index: 1001;
   }
